fix: Increase contrast for green:white to 3:1 (but not to WCAG 2.1's 4.5:1, as this makes red and green look the same for color-blind)

--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -20,13 +20,14 @@
     src: url("/public/fonts/GTEestiProDisplay-Medium.otf") format("opentype");
 }
 
-$ok_color: #b9c504;
+$ok_color: #919c03;
+$ok_bright_color: #b9c504;
 $failed_color: #d0021b;
 $na_color: #656565;
 $na_light_color: #d8d8d8;
 $na_bar_color: #ebedf5;
 $primary: #6c75e1;
-$success: #b9c504;
+$success: #919c03;
 $danger: #d0021b;
 
 $menu_gray: #a9adbc;
